<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_frame"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_book"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:text="@string/reglages"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/languageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/gotham_medium"
        android:text="@string/langage"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignBaseline="@id/languageLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/languageLabel"
        android:fontFamily="@font/gotham_book"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/themeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/languageLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/gotham_medium"
        android:text="@string/theme"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/themeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/languageLabel"
        android:layout_alignBaseline="@id/themeLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/themeLabel"
        android:fontFamily="@font/gotham_book"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/appliquer"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gotham_book"
        android:text="@string/appliquer"
        android:textColor="@color/white" />
</RelativeLayout>