<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/batiments_d_enseignement"
            android:textColor="@color/mainColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/shimmerBatimentsEnsContainer"
            layout="@layout/shimmer_batiments_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerBatiments"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:visibility="gone"
            tools:listitem="@layout/item_batiment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/batiment_administratifs"
            android:textColor="@color/mainColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/shimmerBatimentsAdminContainer"
            layout="@layout/shimmer_batiments_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerBatimentsAdmin"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:visibility="gone"
            tools:listitem="@layout/item_batiment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/salles"
            android:textColor="@color/mainColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/shimmerSalleContainer"
            layout="@layout/shimmer_batiments_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSalles"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:visibility="gone"
            tools:listitem="@layout/item_salle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/autres_infrastructures"
            android:textColor="@color/mainColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/shimmerInfraContainer"
            layout="@layout/shimmer_batiments_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerInfra"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:visibility="gone"
            tools:listitem="@layout/item_infra" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>