<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.infrastructure.InfraFragment">

    <!-- Barre de navigation horizontale -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/nav_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/tout"
                android:textSize="16sp" />

            <View
                android:id="@+id/indicator_all"
                android:layout_width="38dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:background="@drawable/indicator_bg" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_nord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/campus_nord"
                android:textSize="16sp" />

            <View
                android:id="@+id/indicator_nord"
                android:layout_width="55dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:background="@drawable/indicator_bg"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_sud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/campus_sud"
                android:textSize="16sp" />

            <View
                android:id="@+id/indicator_sud"
                android:layout_width="55dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:background="@drawable/indicator_bg"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/infra_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>